[package]
name = "app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
chrono-tz = "0.4"
actix-web = "^3.0.0"
static-files = "0.2.1"
actix-session = "0.4.1"
actix-multipart = "0.3.0"
actix-rt = "1.0"
actix-files = "0.5.0"
actix-web-middleware-redirect-https = "3.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.18.5", features = ["full"] }
futures = "0.3"
async-trait = "0.1.52"
bson = "2.0.0"
log = "0.4.14"
env_logger = "0.9.0"
sanitize-filename = "0.3.0"
csv = "1.1.6"
rand = "0.7"
rand_chacha = "0.2"
time = "0.3.7"
circular-queue = "0.2.6"
serde_derive = "1.0.136"
shared_mongodb = "0.1.6"
lazy_static = "1.4.0"
rust-argon2 = "1.0"
uuid = "1.3.0"
lettre = "0.9.2"
lettre_email = "0.9.2"
select = "0.6.0"
reqwest = { version = "0.11", features = ["json"] }
#async-stripe = { version = "0.15", features = ["runtime-tokio-hyper"] }

[dependencies.mongodb]
version = "2.2.1"
default-features = false
features = ["async-std-runtime"]
